--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   google_maps_flutter: ^2.12.3
   shared_preferences: ^2.5.3
   flutter_dotenv: ^5.2.1
+  app_settings: ^6.1.1
+  uuid: ^4.5.1
+  http: ^1.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
